--- a/apigen.neon
+++ b/apigen.neon
@@ -1,4 +1,4 @@
-title: Domain7 WP Theme Boilerplate
+title: PenguinPress WP Theme Boilerplate
 source: includes
 destination: docs
 templateTheme: bootstrap
